--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ isahc = { version = "1.4.0", features = ["json"] }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_repr = { version = "0.1.7" }
 serde_json = { version = "1.0.64" }
+log = { version = "0.4.14" }
+futures = { version = "0.3.15" }
