--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ serde_repr = { version = "0.1.7" }
 serde_json = { version = "1.0.64" }
 log = { version = "0.4.14" }
 futures = { version = "0.3.15" }
+lazy_static = "1.4.0"
