--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,4 @@ log = { version="0.4.14" }
 futures = { version="0.3.15" }
 chrono = "0.4.19"
 lazy_static = "1.4.0"
-colored = "2.0.0"
+regex = "1.5.4"
