--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Login
-      run: cargo login ${{ env.CARGO_TOKEN }}
+      run: cargo login ${{ secrets.CARGO_TOKEN }}
     - name: Publish
       run: cargo publish
